SERVER-76988 Abort the reshardCollection operation when the zone information is too large
(cherry picked from commit b34244749ab66e8aa761dbc715dad736e3186894)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -382,6 +382,8 @@ last-continuous:
     ticket: SERVER-76872
   - test_file: jstests/sharding/merge_let_params_size_estimation.js
     ticket: SERVER-74806
+  - test_file: jstests/sharding/resharding_update_tag_zones_large.js
+    ticket: SERVER-76988
   suites: null
 last-lts:
   all:
@@ -849,4 +851,6 @@ last-lts:
     ticket: SERVER-76872
   - test_file: jstests/sharding/merge_let_params_size_estimation.js
     ticket: SERVER-74806
+  - test_file: jstests/sharding/resharding_update_tag_zones_large.js
+    ticket: SERVER-76988
   suites: null
