--- a/etc/evergreen_nightly.yml
+++ b/etc/evergreen_nightly.yml
@@ -16,6 +16,8 @@ include:
 - filename: etc/evergreen_yml_components/variants/compile_static_analysis.yml
 ### Uncomment when using this file for a LTS or Rapid release branch. ###
 - filename: etc/evergreen_yml_components/variants/classic_engine.yml
+### Uncomment when using this file for a LTS or Rapid release branch. ###
+- filename: etc/evergreen_yml_components/variants/config_shard.yml
 
 
 parameters:
