SERVER-77382 Return errors when creating a time-series collection with null-embedded timeField or metaField
(cherry picked from commit 7e7276e7cff358a38ca9988c8ce169e9651bbfac)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -410,6 +410,8 @@ last-continuous:
     ticket: SERVER-67529
   - test_file: jstests/core/timeseries/timeseries_groupby_reorder.js
     ticket: SERVER-79136
+  - test_file: jstests/core/timeseries/timeseries_create_collection.js
+    ticket: SERVER-77382
   suites: null
 
 last-lts:
@@ -902,4 +904,6 @@ last-lts:
     ticket: SERVER-67529
   - test_file: jstests/core/timeseries/timeseries_groupby_reorder.js
     ticket: SERVER-79136
+  - test_file: jstests/core/timeseries/timeseries_create_collection.js
+    ticket: SERVER-77382
   suites: null
