SERVER-77208 Separate SASL OIDC Client Types from Params
(cherry picked from commit fc2627fa793441a1b331188cca11ced850a4b93d)

--- a/src/mongo/shell/SConscript
+++ b/src/mongo/shell/SConscript
@@ -115,6 +115,7 @@ env.Library(
         'shell_options_storage',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/client/sasl_client',
         '$BUILD_DIR/mongo/util/options_parser/options_parser',
     ],
 )
