SERVER-77237 Fail tenant migration upon observing an internal session for retryable writes.
(cherry picked from commit 2a43d888fa8ffa8525f40112eee427eaf75f059c)
(cherry picked from commit 8e4e316f9b6a6799cb030e4f1f9f6012bb8416c1)

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -558,4 +558,4 @@ error_codes:
     - {code: 50768,name: NotARetryableWriteCommand}
     - {code: 50915,name: BackupCursorOpenConflictWithCheckpoint, categories: [RetriableError]}
     - {code: 56846,name: ConfigServerUnreachable}
-
+    - {code: 57986,name: RetryableInternalTransactionNotSupported}
