--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -384,6 +384,8 @@ last-continuous:
     ticket: SERVER-74806
   - test_file: jstests/sharding/resharding_update_tag_zones_large.js
     ticket: SERVER-76988
+  - test_file: jstests/replsets/tenant_migration_retryable_internal_transaction.js
+    ticket: SERVER-77237
   suites: null
 last-lts:
   all:
@@ -853,4 +855,6 @@ last-lts:
     ticket: SERVER-74806
   - test_file: jstests/sharding/resharding_update_tag_zones_large.js
     ticket: SERVER-76988
+  - test_file: jstests/replsets/tenant_migration_retryable_internal_transaction.js
+    ticket: SERVER-77237
   suites: null
