--- a/etc/evergreen_yml_components/variants/ibm.yml
+++ b/etc/evergreen_yml_components/variants/ibm.yml
@@ -102,7 +102,9 @@ buildvariants:
       --variables-files=etc/scons/mongodbtoolchain_stable_gcc.vars
       --linker=gold
       --use-diagnostic-latches=off
-    test_flags: --excludeWithAnyTags=requires_external_data_source,requires_increased_memlock_limits,requires_latch_analyzer
+    test_flags: >-
+      --excludeWithAnyTags=requires_external_data_source,requires_increased_memlock_limits
+      --excludeWithAnyTags=requires_latch_analyzer,incompatible_with_s390x
     crypt_task_compile_flags: >-
       SHLINKFLAGS_EXTRA="-Wl,-Bsymbolic
       -Wl,--no-gnu-unique"
@@ -156,7 +158,7 @@ buildvariants:
       archive-mongocryptd
       archive-mongocryptd-debug
     release_buid: true
-    test_flags: --excludeWithAnyTags=requires_latch_analyzer
+    test_flags: --excludeWithAnyTags=incompatible_with_s390x,requires_latch_analyzer
     compile_flags: >-
       --ssl
       MONGO_DISTMOD=rhel83
