SERVER-70937 Disable multiversion testing between lts versions and dead rapid release versions
(cherry picked from commit e6ba00c2748a284d1571091a853b32f492b719b9)

--- a/src/mongo/util/version/releases.yml
+++ b/src/mongo/util/version/releases.yml
@@ -30,8 +30,10 @@ longTermSupportReleases:
   - "6.0"
   - "7.0"
 
-# List of stable MongoDB versions since 2.0 that have been EOL'd. This does not
-# include developer builds (ex: 4.1), but does include rapid releases.
+# List of stable MongoDB versions since 2.0 that have been EOL'd.
+# Entries to this section will also stop them from running as "old" versions in
+# multiversion testing across all branches. This is because there is no need to
+# run multiversion testing against EOL versions.
 eolVersions:
   - "2.0"
   - "2.2"
