SERVER-60466 Move the helpers for creating and inserting external key documents into a util file
(cherry picked from commit 0c10ace040dd8cda65e3b0de5f6295e6f3f530c6)

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1910,6 +1910,19 @@ env.Library(
 )
 
 env.Library(
+    target='keys_collection_util',
+    source=[
+        'keys_collection_util.cpp',
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/concurrency/exception_util',
+        'dbhelpers',
+        'keys_collection_document',
+        'shard_role',
+    ],
+)
+
+env.Library(
     target='keys_collection_client_direct',
     source=[
         'keys_collection_client_direct.cpp',
