--- a/etc/evergreen_nightly.yml
+++ b/etc/evergreen_nightly.yml
@@ -390,3 +390,14 @@ buildvariants:
   - name: check_feature_flag_tags
   - name: compile_venv_deps_check
   - name: resmoke_validation_tests
+
+- name: security-daily-cron
+  modules:
+  - enterprise
+  display_name: "~ Security Daily Cron"
+  cron: "0 4 * * *" # From the ${project_nightly_cron} parameter.
+  run_on:
+  - rhel80-small
+  stepback: false
+  tasks:
+  - name: blackduck_scanner
