--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -11,6 +11,8 @@ selector:
   - jstests/sharding/analyze_shard_key/*[aA]uth*.js
   - jstests/sharding/query/*[aA]uth*.js
   - jstests/sharding/change_streams/*[aA]uth*.js
+  - jstests/sharding/cluster_time_across_add_shard.js
+
   - jstests/sharding/internal_txns/internal_client_restrictions.js
   - jstests/sharding/internal_txns/non_retryable_writes_during_migration.js
   - jstests/sharding/internal_txns/retry_on_transient_error_validation.js
