SERVER-77822 Protect against concurrent runs of ClusterServerParameterRefresher

--- a/src/mongo/idl/SConscript
+++ b/src/mongo/idl/SConscript
@@ -100,6 +100,7 @@ env.CppUnitTest(
         'cluster_server_parameter_common_test.cpp',
         'cluster_server_parameter_initializer_test.cpp',
         'cluster_server_parameter_op_observer_test.cpp',
+        'cluster_server_parameter_refresher_test.cpp',
         'cluster_server_parameter_test_util.cpp',
         'cluster_server_parameter_test.idl',
     ],
@@ -121,6 +122,7 @@ env.CppUnitTest(
         'cluster_server_parameter_common',
         'cluster_server_parameter_initializer',
         'cluster_server_parameter_op_observer',
+        'cluster_server_parameter_refresher',
     ],
 )
 
