SERVER-78134 disable concurrency_replication_wiredtiger_cursor_sweeps on macOS arm64 and macOS
(cherry picked from commit 4531729af7ba1d55a9be876de755454ea4b3327f)
(cherry picked from commit a37c865794cb4ec64ae4079677ab046acfad9c2d)

--- a/etc/evergreen_yml_components/definitions.yml
+++ b/etc/evergreen_yml_components/definitions.yml
@@ -5976,7 +5976,7 @@ tasks:
 
 - <<: *gen_task_template
   name: concurrency_replication_wiredtiger_cursor_sweeps_gen
-  tags: ["concurrency", "repl"]
+  tags: ["concurrency", "repl", "cursor_sweeps"]
   commands:
   - func: "generate resmoke tasks"
     vars:
@@ -6206,7 +6206,7 @@ tasks:
 
 - <<: *task_template
   name: concurrency_simultaneous_replication_wiredtiger_cursor_sweeps
-  tags: ["concurrency", "repl", "random_name"]
+  tags: ["concurrency", "repl", "cursor_sweeps"]
   commands:
   - func: "do setup"
   - func: "run tests"
