--- a/etc/evergreen_yml_components/variants/misc_release.yml
+++ b/etc/evergreen_yml_components/variants/misc_release.yml
@@ -2663,7 +2663,8 @@ buildvariants:
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
-  - name: .concurrency !.ubsan !.no_txns !.kill_terminate
+    # TODO(SERVER-78135): remove !.cursor_sweeps.
+  - name: .concurrency !.ubsan !.no_txns !.kill_terminate !.cursor_sweeps
   - name: disk_wiredtiger
   - name: free_monitoring
   - name: initial_sync_fuzzer_gen
@@ -2718,7 +2719,8 @@ buildvariants:
   - name: .causally_consistent !.sharding
   - name: .change_streams
   - name: .misc_js
-  - name: .concurrency !.ubsan !.no_txns !.kill_terminate
+    # TODO(SERVER-78135): remove !.cursor_sweeps.
+  - name: .concurrency !.ubsan !.no_txns !.kill_terminate !.cursor_sweeps
   - name: disk_wiredtiger
   - name: free_monitoring
   - name: initial_sync_fuzzer_gen
