--- a/src/mongo/db/auth/builtin_roles.yml
+++ b/src/mongo/db/auth/builtin_roles.yml
@@ -63,6 +63,7 @@ roles:
                 - remove
                 - renameCollectionSameDB # db admin gets this also
                 - update
+                - updateSearchIndex
             - matchType: exact_namespace
               collection: 'system.js'
               actions: *readWriteRoleActions
