SERVER-77386 Add input validation for resumeAfter
(cherry picked from commit 57ae46a04f782aec3927f8e57d77b770996fb51c)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -867,4 +867,8 @@ last-lts:
     ticket: SERVER-77237
   - test_file: jstests/sharding/move_chunk_deferred_lookup.js
     ticket: SERVER-78050
+  - test_file: jstests/core/find_with_resume_after_param.js
+    ticket: SERVER-77386
+  - test_file: jstests/core/timeseries/timeseries_resume_after.js
+    ticket: SERVER-77386
   suites: null
