--- a/buildscripts/resmokeconfig/suites/clustered_collection_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/clustered_collection_passthrough.yml
@@ -63,6 +63,8 @@ selector:
   # TODO (SERVER-61259): $text not supported: "No query solutions"
   - jstests/core/**/fts6.js
   - jstests/core/**/fts_projection.js
+  # Assumes there is one collection that is not clustered.
+  - jstests/core/find_with_resume_after_param.js
 
   exclude_with_any_tags:
   - assumes_standalone_mongod
