SERVER-78078 Make sure $listSampledQueries can fetch sampled queries using getMore commands
(cherry picked from commit a19a9d16d9db20a53dee887b5e702016b80374ab)

--- a/buildscripts/resmokeconfig/suites/concurrency_replication_wiredtiger_cursor_sweeps.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_replication_wiredtiger_cursor_sweeps.yml
@@ -53,6 +53,8 @@ executor:
       oplogSize: 1024
       set_parameters:
         enableTestCommands: 1
+        queryAnalysisSamplerConfigurationRefreshSecs: 1
+        queryAnalysisWriterIntervalSecs: 1
         # Setting this parameter to "1" disables cursor caching in WiredTiger, and sets the cache
         # size to "1" in MongoDB. This forces all resources to be released when done.
         wiredTigerCursorCacheSize: 1
