--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -1657,13 +1657,10 @@ env.Library(
 )
 
 if wiredtiger:
-
     env.Library(
-        target='oplog_applier_impl_test_fixture',
-        source=[
+        target='oplog_applier_impl_test_fixture', source=[
             'oplog_applier_impl_test_fixture.cpp',
-        ],
-        LIBDEPS=[
+        ], LIBDEPS=[
             '$BUILD_DIR/mongo/db/catalog/database_holder',
             '$BUILD_DIR/mongo/db/catalog/document_validation',
             '$BUILD_DIR/mongo/db/catalog/health_log',
@@ -1677,8 +1674,9 @@ if wiredtiger:
             'oplog_application',
             'replmocks',
             'storage_interface_impl',
-        ],
-    )
+        ], LIBDEPS_PRIVATE=[
+            '$BUILD_DIR/mongo/db/op_observer/op_observer',
+        ])
 
     env.Library(
         target='idempotency_test_fixture',
@@ -1947,10 +1945,10 @@ env.CppUnitTest(
         'tenant_file_cloner_test.cpp',
     ],
     LIBDEPS=[
-        # Required for service context test fixture
+        '$BUILD_DIR/mongo/db/op_observer/op_observer',
         'cloner_test_fixtures',
         'initial_sync_cloners',
-        'tenant_migration_cloners'
+        'tenant_migration_cloners',
     ],
 )
 
