SERVER-78414 Apply _transferMods batches until size returned == 0.
It is possible for the entire _transferMods command response to contain
changes which aren't relevant for the range being migrated. The
recipient shard should continue running the _transferMods command on the
donor shard primary in this case until it learns there are no further
changes.

(cherry picked from commit a8fdfb121dfc5e35e20a036c8198f2e9240d5b61)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -394,6 +394,8 @@ last-continuous:
     ticket: SERVER-78050
   - test_file: jstests/sharding/cluster_time_across_add_shard.js
     ticket: SERVER-60466
+  - test_file: jstests/sharding/transfer_mods_large_batches.js
+    ticket: SERVER-78414
   suites: null
 last-lts:
   all:
@@ -875,4 +877,6 @@ last-lts:
     ticket: SERVER-77386
   - test_file: jstests/sharding/cluster_time_across_add_shard.js
     ticket: SERVER-60466
+  - test_file: jstests/sharding/transfer_mods_large_batches.js
+    ticket: SERVER-78414
   suites: null
