--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -64,12 +64,6 @@ include:
 
 variables:
 
-- &libfuzzertests
-  name: libfuzzertests!
-  execution_tasks:
-  - compile_and_archive_libfuzzertests
-  - fetch_and_run_libfuzzertests
-
 # Common compile variant dependency specifications.
 # THIS WAS COPIED TO config_shard.yml - ANY MODIFICATIONS HERE SHOULD ALSO BE MADE IN THAT FILE.
 - &linux_x86_dynamic_compile_variant_dependency
@@ -144,7 +138,7 @@ variables:
 
 # If you add anything to san_options, make sure the appropriate changes are
 # also made to SConstruct.
-# and also to the san_options in compile_static_analysis.yml
+# and also to the san_options in compile_static_analysis.yml and sanitizer.yml
 - aubsan_options: &aubsan_options
   >-
     UBSAN_OPTIONS="print_stacktrace=1:external_symbolizer_path=/opt/mongodbtoolchain/v4/bin/llvm-symbolizer"
@@ -3076,43 +3070,3 @@ buildvariants:
   - name: compile_dist_test_TG
     distros:
     - windows-vsCurrent-large
-
-- &rhel80-debug-aubsan-lite_fuzzer-template
-  name: &rhel80-debug-aubsan-lite_fuzzer rhel80-debug-aubsan-lite_fuzzer
-  display_name: "{A,UB}SAN Enterprise RHEL 8.0 FUZZER"
-  cron: "0 4 * * *" # From the ${project_nightly_cron} parameter.
-  modules:
-  - enterprise
-  run_on:
-  - rhel80-build
-  stepback: false
-  expansions:
-    additional_package_targets: >-
-      archive-mongocryptd
-      archive-mongocryptd-debug
-    lang_environment: LANG=C
-    toolchain_version: stable
-    # If you add anything to san_options, make sure the appropriate changes are
-    # also made to SConstruct.
-    san_options: *aubsan_options
-    compile_flags: >-
-      LINKFLAGS=-nostdlib++
-      LIBS=stdc++
-      --variables-files=etc/scons/mongodbtoolchain_${toolchain_version}_clang.vars
-      --dbg=on
-      --opt=on
-      --allocator=system
-      --sanitize=undefined,address,fuzzer
-      --ssl
-      --ocsp-stapling=off
-      -j$(grep -c ^processor /proc/cpuinfo)
-    test_flags: --excludeWithAnyTags=requires_ocsp_stapling
-    resmoke_jobs_factor: 0.3  # Avoid starting too many mongod's under {A,UB}SAN build.
-    hang_analyzer_dump_core: false
-    scons_cache_scope: shared
-    separate_debug: off
-    compile_variant: *rhel80-debug-aubsan-lite_fuzzer
-  display_tasks:
-  - *libfuzzertests
-  tasks:
-  - name: compile_archive_and_run_libfuzzertests_TG
