--- a/etc/evergreen_yml_components/variants/compile_static_analysis.yml
+++ b/etc/evergreen_yml_components/variants/compile_static_analysis.yml
@@ -57,7 +57,7 @@ variables:
 
 # If you add anything to san_options, make sure the appropriate changes are
 # also made to SConstruct.
-# and also to the san_options in evergreen.yml
+# and also to the san_options in evergreen.yml and sanitizer.yml
 - aubsan_options: &aubsan_options
   >-
     UBSAN_OPTIONS="print_stacktrace=1:external_symbolizer_path=/opt/mongodbtoolchain/v4/bin/llvm-symbolizer"
