SERVER-78491 Add resumeAfter test to backport required file
(cherry picked from commit dd5eecc0864573c4c484abee536d1f8431a74fbf)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -396,6 +396,10 @@ last-continuous:
     ticket: SERVER-60466
   - test_file: jstests/sharding/transfer_mods_large_batches.js
     ticket: SERVER-78414
+  - test_file: jstests/core/find_with_resume_after_param.js
+    ticket: SERVER-77386
+  - test_file: jstests/core/timeseries/timeseries_resume_after.js
+    ticket: SERVER-77386
   suites: null
 last-lts:
   all:
