--- a/etc/evergreen_yml_components/definitions.yml
+++ b/etc/evergreen_yml_components/definitions.yml
@@ -162,7 +162,12 @@ variables:
   is_jstestfuzz: true
   num_files: 15
   num_tasks: 5  # Upperbound by `max_sub_suites` specified through the variant with each task still running `num_files` files.
-  resmoke_args: --help # resmoke_args needs to be overridden to specify one of the jstestfuzz suites
+  # It is error prone to require each fuzzer-related Evergreen task to need to override the
+  # resmoke_args variable. However, the resmoke_args variable must be defined as a string in the
+  # task generation configuration to satisfy mongodb/mongo-task-generator. We therefore specify an
+  # empty string for the variable to reflect there are no additional arguments provided to resmoke
+  # by default for the fuzzer-related tasks.
+  resmoke_args: ""
   resmoke_jobs_max: 1
   should_shuffle: false
   continue_on_failure: false
