--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -398,6 +398,8 @@ last-continuous:
     ticket: SERVER-60466
   - test_file: jstests/sharding/transfer_mods_large_batches.js
     ticket: SERVER-78414
+  - test_file: jstests/core/query/elemmatch/elemmatch_or_pushdown_paths.js
+    ticket: SERVER-74954
   - test_file: jstests/core/find_with_resume_after_param.js
     ticket: SERVER-77386
   - test_file: jstests/core/timeseries/timeseries_resume_after.js
@@ -910,4 +912,6 @@ last-lts:
     ticket: SERVER-78813
   - test_file: jstests/change_streams/oplog_rewrite/change_stream_nor_rewrite.js
     ticket: SERVER-78650
+  - test_file: jstests/core/query/elemmatch/elemmatch_or_pushdown_paths.js
+    ticket: SERVER-74954
   suites: null
