SERVER-77654 Parse timeseries timeField as BSON instead of JSON and fix test for multiversion
(cherry picked from commit 488575eef37a245c03c64bad0daa4109d68bfee8)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -20,6 +20,8 @@
 #
 last-continuous:
   all:
+  - test_file: jstests/core/timeseries/timeseries_field_parsed_as_bson.js
+    ticket: SERVER-77654
   - test_file: jstests/sharding/conn_pool_stats.js
     ticket: SERVER-75911
   - test_file: jstests/core/administrative/check_shard_index.js
