SERVER-78601 Fix error generation and handling for notifyShardingEvents() on DB creation
(cherry picked from commit f5deb07561638ae31487f8809a664a7bf056f813)

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -523,6 +523,8 @@ error_codes:
     
     - {code: 398, name: StreamTerminated, categories: [CloseConnectionError]}
 
+    - {code: 403, name: UnsupportedShardingEventNotification}
+
     # Error codes 4000-8999 are reserved.
 
     # Non-sequential error codes for compatibility only)
