SERVER-78187 Make killing a child session interrupt all sessions associated with it unless the kill is performed by reaping of internal sessions for old retryable writes
(cherry picked from commit ba6406caabe61d58bd621f96d983acea75a33634)

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -400,6 +400,8 @@ last-continuous:
     ticket: SERVER-77386
   - test_file: jstests/core/timeseries/timeseries_resume_after.js
     ticket: SERVER-77386
+  - test_file: jstests/replsets/reaping_config_txns_interrupt.js
+    ticket: SERVER-78187
   suites: null
 last-lts:
   all:
@@ -883,4 +885,6 @@ last-lts:
     ticket: SERVER-60466
   - test_file: jstests/sharding/transfer_mods_large_batches.js
     ticket: SERVER-78414
+  - test_file: jstests/replsets/reaping_config_txns_interrupt.js
+    ticket: SERVER-78187
   suites: null
